# DockerizedBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Readme.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: SETUP.md
.github/workflows/: ci.yml
scripts/: example_client.py  test_api.sh
src/: main.py
tests/: __init__.py  test_main.py
